--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div id="root">
         <h1>{{ greeting }} {{ message }}!!</h1>
+        <img v-bind:src="vueLogo" alt="vue">
     </div>
 
     <script src="./js/script.js"></script>
